--- a/field-11.html
+++ b/field-11.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smartboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.1.0/remixicon.css">
     <link rel="stylesheet" href="./scss/main.css">
 </head>
 <body>
-   
-
     <section class="main">
-        <!-- ============ REGISTER============= -->
+        <!-- ============ field============= -->
         <section class="field">
             <div class="field__container container">
                 <h5 class="field__heading">
