cay dat kenh giai tri

--- a/dang-nhap-2-14.html
+++ b/dang-nhap-2-14.html
@@ -23,7 +23,7 @@
                         <h5 class="registers__heading registers__descs">
                             Đăng nhập
                         </h5>
-                        <div class="registers__form-control">
+                        <div class="registers__form-control registers__form-phone">
                             <span class="registers__desc">Số điện thoại</span>
 
                             <input type="text" placeholder="Số điện thoại">
@@ -38,7 +38,9 @@
                             </div>
                         </div>
 
-                        <span class="registers__forgot">Quên mật khẩu</span>
+                        <span class="registers__wrong-login">Sai thông tin đăng nhập</span>
+
+                        <span class="registers__forgot registers__forgot-password">Quên mật khẩu</span>
                         <button class="login__button registers__button">
                             Đăng nhập ngay
                         </button>
