--- a/quang-cao-toan-man-hinh-6.html
+++ b/quang-cao-toan-man-hinh-6.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
 
-                <div class="screen__advertising-content">
+                <div class="screen__advertising-content screen__advertising-comment">
                     <p class="screen__advertising-desc">
                         Mô tả
                     </p>
