--- a/cai-dat-kenh-giai-tri-7.html
+++ b/cai-dat-kenh-giai-tri-7.html
@@ -26,7 +26,7 @@
                     </a>
                 </li>
                 <li class="nav__item">
-                    <a href="charts.html" class="nav__link">
+                    <a href="charts.html" class="nav__link nav__charts">
                         <img src="./img/ranking.svg" alt="">
                         <span>Bảng xếp hạng</span>
                     </a>
@@ -118,10 +118,6 @@
                     </div>
                     <button class="screen__advertising-button">Cài đặt</button>
                 </div>
-
-
-
-
             </div>
        </div>
     </section>
